// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders correctly 1`] = `
<button
  className="css-1k7x4jn"
  fontFamily="body"
  fontSize={0}
  fontWeight="body"
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  width="100%"
>
  
</button>
`;

exports[`<Button withProps />  renders with disabled prop 1`] = `
<button
  className="css-1nh6o6b"
  fontFamily=""
  fontSize=""
  fontWeight=""
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseUp={[Function]}
  width={3}
>
  
</button>
`;
